fix warning due to deprecation of Integer constructor